--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,21 +1,2 @@
-server:
-  port: 3344
-
-spring:
-  application:
-    name: cloud-config-center #注册进eureka服务的微服务名
-  cloud:
-    config:
-      server:
-        git:
-          uri: https://github.com/ymx-muyi/springcloud.git #github上面的仓库名字
-          #搜索日志
-          search-parths:
-            - springcloud-config
-      #读取分支
-      label: master
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:7001/eureka
+config:
+  info: "master version-1"
